syntax = "proto3";

option go_package = "benneighbour.com/proto/b_service";

package b_service;

// The greeting service definition.
service Goodbye {
  // Sends a goodbye
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply) {}
}

// The request message containing the user's name.
message GoodbyeRequest {
  string name = 1;
}

// The response message containing the greetings
message GoodbyeReply {
  string message = 1;
}